<?xml version="1.0"?>
<package format="2">

  <name>learning_ros_cpp</name>
  <version>1.0.0</version>
  <description>The learning_ros_cpp package</description>

  <maintainer email="algonzalez.ext@catec.aero">Antonio Luis González</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>pcl_ros</depend>

</package>